fixed overflowing images on index more tweaks

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -364,13 +364,21 @@ textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[ty
 }
 
 .panel-footer-count{
+    font-weight:100;
     padding:1.5ex;
     color:#fff;
+}
+
+.panel-imgs{
+    max-width:240px;
+    max-height:40px;
+    overflow:hidden;
+    border-radius:0; 
 }
 
 .panel-img{
     height:40px;
     width:40px;
-    overflow:hidden;
+    margin-right:-4px;
     border-radius:0; 
-}
+
